<resources>
    <string name="app_name">Study App</string>
    <string name="title_activity_contact_us">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title">Study Application Vietnam</string>
    <string name="title_2">Two member unlimited liability company</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="save_login">Save Login</string>
    <string name="login">Login</string>
    <string name="exit">Exit</string>
    <string name="home">Home</string>
    <string name="lesson">Lesson</string>
    <string name="exam">Exam</string>
    <string name="profile">My profile</string>
    <string name="contact">Contact us</string>
    <string name="setting">Settings</string>
    <string name="course">Courses</string>
    <string name="rank">Ranking</string>
    <string name="statistic">Statistic</string>
    <string name="streak">Streak</string>
    <string name="totalpoint">Total Point</string>
    <string name="sex">Sex:</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="login_fail">Wrong account or password!</string>
    <string name="hotline">Hotline:</string>
    <string name="address">Address: Số 3 - Cầu Giấy, Hà Nội, Việt Nam</string>
    <string name="name_user">Name:</string>
    <string name="name_account">Account name:</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_logout">Log Out</string>
    <string name="title_math">Choose level course</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="hint_answer">Your answer...</string>
    <string name="btn_confirm">Confirm</string>
    <string name="tv_choose_language">Change Language:</string>
    <string name="notification">Notification</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ntf_course_done">Have you completed the course, would you like to start over? </string>
    <string name="ntf_change_language">Application must be refresh with your selected, you sure?</string>
</resources>