<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:scaleType="centerCrop"
                android:src="@drawable/background_company" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/title"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_2"
                android:textSize="18dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="vertical"
                android:layout_marginTop="8dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/hotline"
                        android:textColor="#FF0303"
                        android:textSize="18dp"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/tvPhoneNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="0814952587"
                        android:textColor="#34FB1E"
                        android:textSize="18dp"
                        android:padding="2dp"
                        android:textStyle="bold"
                        android:layout_marginLeft="30dp"/>


                    <ImageButton
                        android:id="@+id/btnCall"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="#FDFDFD"
                        android:scaleType="centerCrop"
                        android:src="@drawable/call"
                        android:padding="0dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="6dp"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:padding="2dp"
                    android:text="@string/address"
                    android:layout_marginTop="8dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:padding="8dp">

                <fragment
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    tools:context=".MapsActivity" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>