<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/background_profile">

        <androidx.cardview.widget.CardView
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="64dp"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp">

            <ImageView
                android:layout_marginTop="8dp"
                android:id="@+id/ivUser"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:src="@drawable/avatar"
                android:layout_gravity="center"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textSize="20dp"
            android:padding="2dp"
            android:text="@string/name_user" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtName"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="text"
                android:paddingLeft="12dp"
                android:text="Luong Minh" />

            <Button
                android:id="@+id/btnProfileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:text="@string/btn_edit"
                android:textSize="16dp"
                android:padding="0dp"
                android:textAllCaps="false"
                android:textColor="#317BF8"
                android:textStyle="italic"
                app:backgroundTint="#FFFFFF" />
        </LinearLayout>
        <TextView
            android:id="@+id/tvuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textSize="20dp"
            android:padding="2dp"
            android:text="@string/name_account" />

        <EditText
            android:id="@+id/edtNameAccount"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ems="10"
            android:inputType="text"
            android:paddingLeft="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:enabled="false"
            android:text="admin" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:padding="2dp"
            android:text="@string/password" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:paddingLeft="12dp"
                android:background="@android:color/transparent"
                android:text="Luong Minh"/>

            <Button
                android:id="@+id/btnProfilePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:text="@string/btn_edit"
                android:textSize="16dp"
                android:padding="0dp"
                android:textAllCaps="false"
                android:textColor="#317BF8"
                android:textStyle="italic"
                app:backgroundTint="#FFFFFF" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email:"
            android:textSize="20dp"
            android:padding="2dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:paddingLeft="12dp"
                android:background="@android:color/transparent"
                android:text="Abc@gmail.com" />

            <Button
                android:id="@+id/btnProfileEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:text="@string/btn_edit"
                android:textSize="16dp"
                android:padding="0dp"
                android:textAllCaps="false"
                android:textColor="#317BF8"
                android:textStyle="italic"
                app:backgroundTint="#FFFFFF"/>
        </LinearLayout>

    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_logout"
        app:cornerRadius="20dp"
        android:layout_marginBottom="2dp"
        app:strokeColor="#FFFFFF" />

</LinearLayout>